# stylesync

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
mocks/: products.json  sales.csv
src/stylesync/: __init__.py  config.py  main.py
src/stylesync/decorators/: decorators.py
src/stylesync/routes/: main.py  users.py
src/stylesync/schemas/: product.py  sale.py  user.py
src/stylesync/static/html/: index.html
